fixed collapse bug for ticket

--- a/src/app/player-dashboard/player-dashboard.component.css
+++ b/src/app/player-dashboard/player-dashboard.component.css
@@ -1,2 +1,4 @@
 
-    
+    :host{
+        margin-bottom: 100px;
+    }
